--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,7 @@
-<form (submit)="submitLogin()">
-  <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="userLoginData.username">
-  <input type="password" placeholder="Enter your password" name="password" [(ngModel)]="userLoginData.password">
-  <button type="submit">Login</button>
-</form>
+<div class="login-form">
+  <form (submit)="submitLogin()">
+    <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="userLoginData.username">
+    <input type="password" placeholder="Enter your password" name="password" [(ngModel)]="userLoginData.password">
+    <button type="submit">Login</button>
+  </form>
+</div>
