--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 20px;
   background-color: aqua;
 }
 
@@ -11,8 +12,6 @@
 
 .authorization-buttons {
   display: flex;
-  justify-content: flex-end;
-  margin-bottom: 20px;
 
   a {
     //border: none;
