--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,6 +2,7 @@
   <form (submit)="submitLogin()">
     <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="userLoginData.username">
     <input type="password" placeholder="Enter your password" name="password" [(ngModel)]="userLoginData.password">
+    <div *ngIf="isEmptyFields">You must fill all fields</div>
     <button type="submit">Login</button>
   </form>
 </div>
