--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,7 +1,9 @@
-<form>
-  <div>
+<div class="user-profile-form">
+  <form>
+    <label>name</label>
+    <input type="text" value="{{this.userData.name}}">
     <label>email</label>
-    <input type="text">
-  </div>
+    <input type="text" value="{{userData.email}}">
+  </form>
+</div>
 
-</form>
