--- a/src/app/auth/registration/registration.component.scss
+++ b/src/app/auth/registration/registration.component.scss
@@ -10,6 +10,10 @@
       display: block;
       margin-bottom: 10px;
     }
+    div{
+      color: red;
+      margin-bottom: 10px;
+    }
     button{
       &:hover{
         cursor:pointer;
