--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -1,8 +1,17 @@
 <div class="registration-form">
   <form (submit)="submitRegister()">
-    <input type="text" placeholder="Enter you name" name="name" [(ngModel)]="userRegisterData.name">
-    <input type="text" placeholder="Enter your email" name="email" [(ngModel)]="userRegisterData.email">
-    <input type="password" placeholder="Enter your password" name="password" [(ngModel)]="userRegisterData.password">
+    <input autocomplete="off" readonly
+           onfocus="this.removeAttribute('readonly')"
+           type="text" placeholder="Enter you name" name="name"
+           [(ngModel)]="userRegisterData.name">
+    <input autocomplete="off" readonly
+           onfocus="this.removeAttribute('readonly')"
+           type="text" placeholder="Enter your email" name="email"
+           [(ngModel)]="userRegisterData.email">
+    <input autocomplete="off" readonly
+           onfocus="this.removeAttribute('readonly')"
+           type="password" placeholder="Enter your password" name="password"
+           [(ngModel)]="userRegisterData.password">
     <div *ngIf="isEmptyFields">You must fill all fields</div>
     <button type="submit">Register</button>
   </form>
