--- a/src/app/auth/registration/registration.component.scss
+++ b/src/app/auth/registration/registration.component.scss
@@ -10,7 +10,15 @@
       display: block;
       margin-bottom: 10px;
     }
-    div{
+    .back-mail-error{
+      color: red;
+      margin-bottom: 10px;
+    }
+    .back-password-error{
+      color: red;
+      margin-bottom: 10px;
+    }
+    .empty-error{
       color: red;
       margin-bottom: 10px;
     }
