--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,9 +1,11 @@
 <div class="user-profile-form">
-  <form>
-    <label>name</label>
-    <input type="text" value="{{this.userData.name}}">
-    <label>email</label>
-    <input type="text" value="{{userData.email}}">
-  </form>
+  <div class="name">
+    <label>name:</label>
+    <span>{{this.userData.name}}</span>
+  </div>
+  <div class="email">
+    <label>email:</label>
+    <span>{{userData.email}}</span>
+  </div>
 </div>
 
