--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -10,7 +10,11 @@
       display: block;
       margin-bottom: 10px;
     }
-    div{
+    .invalid-credentials-error{
+      color: red;
+      margin-bottom: 10px;
+    }
+    .empty-error{
       color: red;
       margin-bottom: 10px;
     }
