--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -3,20 +3,13 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  form{
+ .name, .email{
+   margin-bottom: 10px;
+   font-size: 20px;
     label{
-
+      margin-right: 10px;
     }
-    input{
-      outline: none;
-      padding: 5px;
-      display: block;
-      margin-bottom: 10px;
-    }
-    button{
-      &:hover{
-        cursor:pointer;
-      }
+    span{
     }
   }
 }
